fix certificate page, experience layout issues

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -215,14 +215,14 @@ span {
     padding-bottom: 5rem;
     .container {
       margin-bottom: 2rem;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
-      // margin: 2rem;
+      margin: 0 2rem 2rem 2rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(20rem ,1fr));
+      grid-column-gap: 2rem;
       .card {
         color: black;
         margin: 2rem;
-        width: 40%;
+        width: 100%;
         // height: 50vh;
         background-color: $theme-card ;
         display: flex;
@@ -240,10 +240,6 @@ span {
   border:1px solid #A8B090;
   margin: .5rem;
   padding: 1rem;
-  // p {
-  //   font-size: 1.5rem;
-  //   text-indent: 2rem;
-  // }
 }
   
       }
@@ -272,11 +268,6 @@ span {
           }
           .card-body{
             margin: 0.5rem;
-            // p {
-              
-            //   font-size: 1rem;
-            //   text-indent: 2rem;
-            // }
           }
             
         }
