--- a/src/components/certificate/Certificate.scss
+++ b/src/components/certificate/Certificate.scss
@@ -1,37 +1,57 @@
+.certificate-page{
+  .page-body{
 
-
-
-div > .certificate-page {
-  // background-color: #e9edc9;
-  .page-body > .container > .card {
-   
-    .card-img{
-      padding:0;
- 
-      img{
-    
-        width: 100%;
-      }
-    }
-
-  }
-}
-
-
-
-@media screen and (max-width: 1400px) {
-  div > .certificate-page {
-
-    .page-body > .container > .card {
-   
-      .card-img{
-        margin:0rem;
-        // img{
-        //   margin: auto;
-        //   width: 100%;
-        // }
-      }
+    .container{
+      display:grid;
+      grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
+      grid-column-gap: 2rem;
   
+      .card{
+
+        .card-img{
+          img{
+          width: 100%;
+          }
+        }
+      }
     }
   }
+
 }
+
+
+
+// div > .certificate-page {
+//   // background-color: #e9edc9;
+//   .page-body > .container > .card {
+   
+//     .card-img{
+//       padding:0;
+ 
+//       img{
+    
+//         width: 100%;
+//       }
+//     }
+
+//   }
+// }
+
+
+
+// @media screen and (max-width: 1400px) {
+//   div > .certificate-page {
+
+//     .page-body > .container > .card {
+   
+//       .card-img{
+//         margin:0rem;
+//         // img{
+//         //   margin: auto;
+//         //   width: 100%;
+//         // }
+//       }
+  
+//     }
+//   }
+// }
